--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,24 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_C_COMPILER clang)
 
-# 编译选项
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2")
+# 设置默认构建类型为Debug，如果没有指定的话
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
+endif()
+
+# 根据构建类型设置不同的编译选项
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    # Debug模式：添加调试信息，禁用优化，启用更多警告
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -O0 -DDEBUG")
+    message(STATUS "Debug mode: optimizations disabled, debug info enabled")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+    # Release模式：启用优化，去掉调试信息
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2 -DNDEBUG")
+    message(STATUS "Release mode: optimizations enabled")
+else()
+    # 默认编译选项
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2")
+endif()
 
 # 包含目录
 include_directories(${CMAKE_SOURCE_DIR}/include)
